--- a/_posts/2024-05-28-BAE1.md
+++ b/_posts/2024-05-28-BAE1.md
@@ -21,7 +21,7 @@ last_modified_at: 2024-05-28
 
 ---
 
-[BAE-JOON](boj.kr/2438 "반복문")
+[BAE-JOON](https://www.acmicpc.net/problem/2438 "반복문")
 
 ---
 
