--- a/_posts/2024-05-28-BAE2438.md
+++ b/_posts/2024-05-28-BAE2438.md
@@ -1,7 +1,7 @@
 ---
 # Header
 title: "BAE-JOON 단계별로 풀어보기 2438[Java]"
-excerpt: "반복문 연습"
+description: "BAE-JOON 문제 풀어보기"
 name: SeungGGu
 writer: SeungGGu
 categories: [BAE-JOON, 반복문] # [메인 카테고리, 서브 카테고리]
