--- a/_posts/2024-05-28-BAE2438.md
+++ b/_posts/2024-05-28-BAE2438.md
@@ -21,7 +21,7 @@ last_modified_at: 2024-05-28
 
 ---
 
-[BAE-JOON](https://www.acmicpc.net/problem/2438 "반복문")
+문제 바로가기 👉 [BAE-JOON](https://www.acmicpc.net/problem/2438 "반복문")
 
 ---
 
@@ -45,8 +45,12 @@ last_modified_at: 2024-05-28
 *****
 ```
 
+## 해설
+
 반복문을 사용하여 별을 피라미드 모양으로 찍는 간단한 문제이다  
 먼저 Scanner로 입력 받아 이중 for문을 사용하여 해결하면 된다.
+
+## 코드
 
 ```java
 package 반복문;
@@ -78,5 +82,7 @@ public class bae2438 {
     }
 }
 ```
+
+## 주의사항
 
 > 제출 시 package 삭제 public class는 main으로 바꿔서 제출!!
